# foundry

./: .gitignore  AI_AGENT_TRAINING_GUIDE.md  CMakeLists.txt  COMPLETE_BUILD_SYSTEM_IMPLEMENTATION.md  COMPLETE_PLATFORM_ANALYSIS.md  FEATURE_COMPLETE.md  FINAL_COMPREHENSIVE_VERIFICATION.md  FINAL_VERIFICATION_REPORT.md  FOUNDRY_ENGINE_COMPLETE.md  FOUNDRY_ENHANCEMENT_ROADMAP.md  IMPLEMENTATION_STATUS.md  PLATFORM_COMPLETENESS_AND_IDE_INTEGRATION.md  PLATFORM_COMPLETION_FINAL_REPORT.md  PLATFORM_COMPLETION_TASKS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_GO.md  README_WASM.md  README_WEB.md  SECURITY_FIXES.md  SECURITY_FIXES_REPORT.md  TESTING_REPORT.md  VERIFICATION_REPORT.md  build.bat  build.sh  build_wasm.sh  build_web.sh  foundry-engine.json  package.json  validate.sh
.github/workflows/: ci-cd.yml
core/: math.go
docs/: GETTING_STARTED.md
examples/: main.cpp  udp_networking_example.cpp  web_multiplayer_example.html
examples/complete-game-demo/src/: main.ts
examples/multiplayer-demo/src/: main.ts
examples/native-typescript-game/: foundry.json
examples/native-typescript-game/src/: main.ts
examples/typescript-game/: index.html
examples/typescript-game/src/: main.ts
ide/: PLUGIN_DEVELOPMENT_GUIDE.md  README.md  build-ide.sh  build.gradle.kts  quick-start.sh
ide/jni/: CMakeLists.txt  FoundryEngineJNI.cpp  FoundryEngineJNI.h
ide/plugins/builtin/: AIAgentAssistPlugin.kt
ide/templates/default-project/: foundry.json
ide/templates/typescript/: foundry.json  index.html  package.json  tsconfig.json  webpack.config.js
include/GameEngine/ai/: AIAgent.h  AISystem.h  BehaviorTree.h  DecisionTree.h  FiniteStateMachine.h  NavigationSystem.h  ReinforcementLearning.h
include/GameEngine/animation/: AdvancedAnimation.h  Kinematics.h
include/GameEngine/audio/: AdvancedAudioSystem.h  AudioSystem.h
include/GameEngine/character/: AdvancedCharacterSystem.h
include/GameEngine/cloud/: CloudSystem.h
include/GameEngine/components/: AIComponent.h  Component.h  CoreComponents.h  TransformComponent.h
include/GameEngine/core/: AdvancedMemoryManager.h  CodingStandards.h  ECS.h  Engine.h  EnhancedECS.h  Entity.h  JobSystem.h  MemoryManager.h  MemoryPool.h  PluginSystem.h  Scene.h  SerializationSystem.h  SplashScreen.h  System.h  SystemImpl.h  World.h
include/GameEngine/graphics/: AdvancedLighting.h  AdvancedRenderPipeline.h  GraphicsTypes.h  Material.h  MultimediaEditor.h  NeRFRenderer.h  PointCloudRenderer.h  PostProcessing.h  Rasterizer.h  RayTracer.h  RenderPipeline.h  Renderer.h  SpriteRenderer.h
include/GameEngine/math/: Matrix4.h  NumericalMethods.h  Polynomial.h  ProjectiveGeometry.h  Quaternion.h  Vector2.h  Vector3.h
include/GameEngine/mobile/: MobileSystem.h
include/GameEngine/networking/: AdvancedNetworking.h  NetworkManager.h  NetworkSystem.h  README.md  UDPNetworking.h
include/GameEngine/optimization/: SpatialPartition.h
include/GameEngine/physics/: LightPhysics.h  PhysicsSystem.h  WavePhysics.h
include/GameEngine/platform/: PlatformInterface.cpp  PlatformInterface.h  TypeSafePlatformInterface.h
include/GameEngine/scene/: SceneManager.h
include/GameEngine/security/: SecuritySystem.h
include/GameEngine/simulation/: FilterSystem.h  FluidSimulation.h  NoiseGenerator.h  SmokeSimulation.h  VisualEffects.h
include/GameEngine/systems/: AISystem.h  AssetPipeline.h  AssetSystem.h  AudioSystem.h  ClothSystem.h  DeformableBodySystem.h  DopplerEffect.h  FluidSystem.h  InputSystem.h  KinematicsSystem.h  NBodySystem.h  NetworkSystem.h  PhysicsSystem.h  ProfilerSystem.h  RealWorldPhysicsEnhancements.h  ScriptingSystem.h  SpringSystem.h  UISystem.h  UpdateSystem.h
include/GameEngine/typescript/: AdvancedTypeScriptRuntime.h  NativeTypeScriptInterface.h  NativeTypeScriptRuntime.h  TypeScriptInterface.h  TypeScriptRuntime.h  TypeScriptToNativeCompiler.h
include/GameEngine/ui/: UIManager.h
include/GameEngine/vr/: VRSystem.h
include/GameEngine/world/: ImmersiveWorldCreator.h  ProceduralGeneration.h
networking/: README.md  go.mod
networking/client/: client.go
networking/server/: server.go
networking/shared/: math_types.go  messages.go
scripts/: build-production.sh  run-integration-tests.sh  run-performance-tests.sh  run-tests.sh
src/: Engine.cpp  MemoryPool.cpp  Scene.cpp  SerializationSystem.cpp  SplashScreen.cpp  World.cpp  main.cpp
src/GameEngine/ai/: AIAgent.cpp  AISystem.cpp  NeuralNetwork.cpp
src/GameEngine/audio/: AdvancedAudioSystem.cpp  AudioSystem.cpp
src/GameEngine/character/: AdvancedCharacterSystem.cpp
src/GameEngine/core/: AdvancedMemoryManager.cpp  ECS.cpp  EnhancedECS.cpp  MemoryManager.cpp
src/GameEngine/graphics/: AdvancedRenderPipeline.cpp  RenderPipeline.cpp
src/GameEngine/networking/: NetworkSystem.cpp
src/graphics/: D3D11Renderer.cpp  OpenGLRenderer.cpp
src/math/: ProjectiveGeometry.cpp
src/networking/: UDPNetworking.cpp
src/simulation/: FilterSystem.cpp  FluidSimulation.cpp  NoiseGenerator.cpp  SimulationGPU.cpp  SimulationOptimization.cpp  SmokeSimulation.cpp  VisualEffects.cpp
src/systems/: AssetPipeline.cpp  AssetSystem.cpp  AudioSystem.cpp  InputSystem.cpp  NetworkSystem.cpp  PhysicsSystem.cpp  ProfilerSystem.cpp  ScriptingSystem.cpp  UISystem.cpp  UpdateSystem.cpp
src/typescript/: NativeTypeScriptRuntime.cpp  TypeScriptToNativeCompiler.cpp
src/web/: WebAssemblyBindings.cpp  engine.d.ts  engine.js  index.html  library.js  loading.js  manifest.json  shell.html  style.css
tests/: AdvancedEngineTests.cpp  CMakeLists.txt  ComprehensiveEngineTests.cpp  TestAISystems.cpp  TestAnimationSystems.cpp  TestAssetSystem.cpp  TestCoreSystems.cpp  TestECS.cpp  TestEngineCore.cpp  TestEngineCoreComplete.cpp  TestGraphicsSystems.cpp  TestIDESystem.kt  TestMCPAgents.kt  TestMath.cpp  TestMathSystems.cpp  TestMemoryPool.cpp  TestNetworkSystems.cpp  TestOptimizationSystems.cpp  TestPhysicsSystems.cpp  TestPlatformInterface.cpp  TestPlatformSpecific.cpp  TestPlatformSpecificComplete.cpp  TestPlatformSystems.cpp  TestRunner.cpp  TestSerializationSystem.cpp  TestWorldSystems.cpp
(+54 files in other folders)
